/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2015-01-14
Set FortranBinary to default OutputFileType for Plot3d in FCONV
FCONVでPlot3d形式のファイル出力をする際、デフォルトでのファイルタイプが
FortranBinaryになるように変更した。
また、FCONVの出力形式のチェックについて修正を加えた。

------------------
2015-01-09
Edit buffer tuning for reading BOV file and remove comments in cdm_Array_inline.h
以前、BOV形式のファイル読み込み部をinline関数にしたが、元に戻した。
バッファサイズの指定をライブラリのコンパイル時に指定するようにしたので、
inline関数にする必要がなくなったため。
また、ファイルcdm_Array_inline.h内で定義しているメソッドreadBinary,writeBinary
に記載していたコメント文を削除した。

------------------
2015-01-09
Edit configure options for buffer tuning
バッファサイズの指定をライブラリのコンパイル時に指定するように、
configureオプションに関する部分を修正した。
(元々、バッファサイズの指定はライブラリのコンパイル時ではなく、
ライブラリを用いるプログラムのコンパイル時に行うようにしていた。)

------------------
2015-01-08
Minor corrections in conv.C and cdm_Define.h
ファイルconv.C内のif文中にあったorを||に訂正した。
また、ファイルcdm_Define.hにおいて、エラーコードの体裁を整えた。

------------------
2015-01-05
Make new branch advance_develop_2 and merge branch advance_develop into it
masterのリビジョン"accept pull request #11 and modify tools/fconv/src/Makefile.am"
より新たにブランチadvance_develop_2を作成し、そのブランチにブランチadvance_develop
をマージした。

------------------
2014-12-25
accept pull request #11 and modify tools/fconv/src/Makefile.am

------------------
2014-12-10
Add message when CellID and BCflagID were converted in FCONV
FCONVのMxN変換およびMx1変換において、読み込んだ各ランクのCellIDとBCflagIDが
ランク0のCellIDとBCflagIDに変換される時、メッセージを出力するようにした。

------------------
2014-12-09
Make modifications to CellID and BCflagID
クラスcdm_RankのCellIDと境界IDをランク毎に設定するように修正した。
また、メソッドWriteProcDfiFileにおける引数out_hostのデフォルトをなくし、
引数の順序を変更した。

------------------
2014-12-09
Add CellID and BCflagID in class cdm_Rank
クラスcdm_RankにCellIDと境界IDを示すメンバ変数c_id,bc_idを追加し、
proc.dfiのProcessのところにこれらのIDを表示するようにした。

------------------
2014-12-02
add examples

------------------
2014-12-01
accept pull request #10
